[package]
name = "rs2d"
version = "0.1.0"
edition = "2021"
description="A crate for encoding and decoding data in a 2D Reed-Solomon matrix."
authors = ["Anoushk Kharangate <kharangateanoushk04@gmail.com>", "Harsh Patel <hp80738@gmail.com>"]
readme = "README.md"
categories = ["encoding"]
keywords = ["reed-solomon","2d","erasure","encoding"]
repository = "https://github.com/anoushk1234/rs2d"
license="MIT"



[dependencies]
reed-solomon-erasure = { version = "3.1", features=["pure-rust"] }
solana-merkle-tree = "1.15.2"

[dev-dependencies]
rand = "0.8.5"
glassbench = "0.3.4"

[[bench]]
name = "rs2d_bench"
harness=false
